...
  }

  void _seedPdvs() {
    final raw = [
      (
        'PDV-001',
        'Mercado Bom Preço',
        'Av. Paulista, 1500',
        'São Paulo',
        'SP',
        -23.561,
        -46.656,
      ),
      (
        'PDV-002',
        'Supermercado Estrela',
        'R. das Flores, 234',
        'Rio de Janeiro',
        'RJ',
        -22.971,
        -43.183,
      ),
...
